--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 body {
+  margin: 0 2em 0 2em; /*this puts footer bottom*/
+  position: relative;/*this puts footer bottom*/
+  min-height: 100% /*this make footer text small*/
   font-family: system-ui;
   background: #f06d06;
   color: purple;
