--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body {
   margin: 0 2em 0 2em; /*this puts footer bottom*/
   position: relative;/*this puts footer bottom*/
-  min-height: 100% /*this make footer text small*/
+  min-height: 100%; /*this make footer text small*/
+  padding: 0;
   font-family: system-ui;
   background: #f06d06;
   color: purple;
